# avito

./: .env.example  .gitignore  README.md  pyproject.toml
data/: avito_listings.db  avito_products.db  avito_report.xlsx  avito_report_from_db.xlsx  proxies.txt  test_10_listings.xlsx  test_direct_listing.db  test_direct_listing.xlsx  test_single_listing.db  test_single_listing.xlsx
scripts/: export_from_db.py  test_10_listings.py  test_direct_listing.py  test_single_listing.py
src/: __init__.py  __main__.py
src/config/: __init__.py  logger.py  settings.py
src/models/: __init__.py  product.py
src/repositories/: __init__.py  base.py  sqlite_repository.py
src/services/: __init__.py  ai_service.py  browser_service.py  export_service.py  listing_service.py  normalizer_service.py  parallel_listing_service.py  proxy_health.py  scraper_service.py
src/utils/: __init__.py  retry.py
