[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================
# Метаданные проекта
# ============================================
[project]
name = "avito-parser"
version = "1.0.0"
description = "Парсер товаров Avito с AI-нормализацией названий и экспортом в Excel"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# ============================================
# Зависимости
# ============================================
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
]

# ============================================
# Точка входа
# ============================================
[project.scripts]
avito-parser = "src.__main__:main"

# ============================================
# Setuptools — обнаружение пакетов
# ============================================
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================
# Ruff — линтинг и форматирование
# (замена black + flake8 + isort)
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (сортировка импортов)
    "N",      # pep8-naming
    "UP",     # pyupgrade (современный Python)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "T20",    # flake8-print (запрет print в коде)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (закомментированный код)
    "PL",     # pylint
    "PERF",   # perflint (производительность)
]
ignore = [
    "T201",   # разрешаем print в __main__.py
    "PLR0913", # разрешаем >5 аргументов в функциях
    "PLR2004", # разрешаем magic values в сравнениях
    "E501",   # длина строки контролируется line-length
]

[tool.ruff.lint.per-file-ignores]
"src/__main__.py" = ["T201"]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ============================================
# Mypy — статическая проверка типов (strict)
# ============================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "openpyxl.*",
    "aiohttp.*",
]
ignore_missing_imports = true

# ============================================
# Pytest — конфигурация тестов
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
